@@ -11,10 +11,13 @@ import com.github.tomakehurst.wiremock.WireMockServer;
 import com.streamarr.server.AbstractIntegrationTest;
 import com.streamarr.server.domain.ExternalSourceType;
 import com.streamarr.server.domain.Library;
+import com.streamarr.server.domain.media.ImageType;
 import com.streamarr.server.domain.media.Movie;
 import com.streamarr.server.fixtures.LibraryFixtureCreator;
 import com.streamarr.server.repositories.LibraryRepository;
+import com.streamarr.server.services.metadata.MetadataResult;
 import com.streamarr.server.services.metadata.RemoteSearchResult;
+import com.streamarr.server.services.metadata.events.ImageSource.TmdbImageSource;
 import com.streamarr.server.services.parsers.video.VideoFileParserResult;
 import java.time.LocalDate;
 import org.junit.jupiter.api.AfterAll;
@@ -232,9 +235,9 @@ class TMDBMovieProviderIT extends AbstractIntegrationTest {
     var result = provider.getMetadata(buildSearchResult("27205"), savedLibrary);
 
     assertThat(result).isPresent();
-    assertThat(result.get().getExternalIds()).hasSize(1);
+    assertThat(result.get().entity().getExternalIds()).hasSize(1);
     assertThat(
-            result.get().getExternalIds().stream()
+            result.get().entity().getExternalIds().stream()
                 .anyMatch(id -> id.getExternalSourceType() == ExternalSourceType.TMDB))
         .isTrue();
   }
@@ -251,7 +254,7 @@ class TMDBMovieProviderIT extends AbstractIntegrationTest {
     var result = provider.getMetadata(buildSearchResult("27205"), savedLibrary);
 
     assertThat(result).isPresent();
-    assertThat(result.get().getContentRating()).isNull();
+    assertThat(result.get().entity().getContentRating()).isNull();
   }
 
   @Test
@@ -262,7 +265,7 @@ class TMDBMovieProviderIT extends AbstractIntegrationTest {
     var result = provider.getMetadata(buildSearchResult("27205"), savedLibrary);
 
     assertThat(result).isPresent();
-    assertThat(result.get().getCast()).isEmpty();
+    assertThat(result.get().entity().getCast()).isEmpty();
   }
 
   @Test
@@ -273,7 +276,7 @@ class TMDBMovieProviderIT extends AbstractIntegrationTest {
     var result = provider.getMetadata(buildSearchResult("27205"), savedLibrary);
 
     assertThat(result).isPresent();
-    assertThat(result.get().getContentRating()).isNull();
+    assertThat(result.get().entity().getContentRating()).isNull();
   }
 
   @Test
@@ -284,7 +287,7 @@ class TMDBMovieProviderIT extends AbstractIntegrationTest {
     var result = provider.getMetadata(buildSearchResult("27205"), savedLibrary);
 
     assertThat(result).isPresent();
-    assertThat(result.get().getStudios()).isEmpty();
+    assertThat(result.get().entity().getStudios()).isEmpty();
   }
 
   @Test
@@ -299,7 +302,7 @@ class TMDBMovieProviderIT extends AbstractIntegrationTest {
     var result = provider.getMetadata(buildSearchResult("27205"), savedLibrary);
 
     assertThat(result).isPresent();
-    assertThat(result.get().getReleaseDate()).isNull();
+    assertThat(result.get().entity().getReleaseDate()).isNull();
   }
 
   @Test
@@ -363,39 +366,62 @@ class TMDBMovieProviderIT extends AbstractIntegrationTest {
   }
 
   @Test
-  @DisplayName("Should map profile path when TMDB response includes cast profile path")
-  void shouldMapProfilePathWhenResponseIncludesCastProfilePath() {
-    var movie = getMetadataFromFullResponse();
+  @DisplayName("Should build person image sources when TMDB response includes cast profile path")
+  void shouldBuildPersonImageSourcesWhenResponseIncludesCastProfilePath() {
+    var result = getFullMetadataResult();
 
-    assertThat(movie.getCast().get(0).getProfilePath())
-        .isEqualTo("/wo2hJpn04vbtmh0B9utCFdsQhxM.jpg");
+    assertThat(result.personImageSources()).containsKey("6193");
+    var sources = result.personImageSources().get("6193");
+    assertThat(sources).hasSize(1);
+    assertThat(sources.getFirst()).isInstanceOf(TmdbImageSource.class);
+    var tmdbSource = (TmdbImageSource) sources.getFirst();
+    assertThat(tmdbSource.imageType()).isEqualTo(ImageType.PROFILE);
+    assertThat(tmdbSource.pathFragment()).isEqualTo("/wo2hJpn04vbtmh0B9utCFdsQhxM.jpg");
   }
 
   @Test
-  @DisplayName("Should map logo path when TMDB response includes company logo path")
-  void shouldMapLogoPathWhenResponseIncludesCompanyLogoPath() {
-    var movie = getMetadataFromFullResponse();
+  @DisplayName("Should build company image sources when TMDB response includes company logo path")
+  void shouldBuildCompanyImageSourcesWhenResponseIncludesCompanyLogoPath() {
+    var result = getFullMetadataResult();
 
-    assertThat(movie.getStudios().iterator().next().getLogoPath())
-        .isEqualTo("/8M99Dkt23MjQMTTWukq4m5XsEuo.png");
+    assertThat(result.companyImageSources()).containsKey("923");
+    var sources = result.companyImageSources().get("923");
+    assertThat(sources).hasSize(1);
+    var tmdbSource = (TmdbImageSource) sources.getFirst();
+    assertThat(tmdbSource.imageType()).isEqualTo(ImageType.LOGO);
+    assertThat(tmdbSource.pathFragment()).isEqualTo("/8M99Dkt23MjQMTTWukq4m5XsEuo.png");
   }
 
   @Test
-  @DisplayName("Should map backdrop and poster paths when TMDB response includes image paths")
-  void shouldMapBackdropAndPosterPathsWhenResponseIncludesImagePaths() {
-    var movie = getMetadataFromFullResponse();
+  @DisplayName("Should build image sources when TMDB response includes backdrop and poster paths")
+  void shouldBuildImageSourcesWhenResponseIncludesBackdropAndPosterPaths() {
+    var result = getFullMetadataResult();
 
-    assertThat(movie.getBackdropPath()).isEqualTo("/s3TBrRGB1iav7gFOCNx3H31MoES.jpg");
-    assertThat(movie.getPosterPath()).isEqualTo("/oYuLEt3zVCKq57qu2F8dT7NIa6f.jpg");
+    assertThat(result.imageSources()).hasSize(2);
+    assertThat(result.imageSources())
+        .anyMatch(
+            s ->
+                s instanceof TmdbImageSource t
+                    && t.imageType() == ImageType.POSTER
+                    && "/oYuLEt3zVCKq57qu2F8dT7NIa6f.jpg".equals(t.pathFragment()))
+        .anyMatch(
+            s ->
+                s instanceof TmdbImageSource t
+                    && t.imageType() == ImageType.BACKDROP
+                    && "/s3TBrRGB1iav7gFOCNx3H31MoES.jpg".equals(t.pathFragment()));
   }
 
   // --- Helpers ---
 
-  private Movie getMetadataFromFullResponse() {
+  private MetadataResult<Movie> getFullMetadataResult() {
     stubFullMovieResponse();
     var result = provider.getMetadata(buildSearchResult("27205"), savedLibrary);
     assertThat(result).isPresent();
     return result.get();
+  }
+
+  private Movie getMetadataFromFullResponse() {
+    return getFullMetadataResult().entity();
   }
 
   private RemoteSearchResult buildSearchResult(String externalId) {
